@@ -66,9 +66,9 @@ EOG_HAS_PYTHON=1
 
 AC_MSG_CHECKING([which plugins to build])
 
-ALL_PLUGINS="postr reload fullscreen"
-USEFUL_PLUGINS="postr reload fullscreen"
-DEFAULT_PLUGINS="postr reload fullscreen"
+ALL_PLUGINS="postr"
+USEFUL_PLUGINS="postr"
+DEFAULT_PLUGINS="postr"
 
 PYTHON_ALL_PLUGINS=""
 PYTHON_USEFUL_PLUGINS=""
@@ -88,7 +88,7 @@ fi
 AC_ARG_WITH([plugins],
 [  --with-plugins=plugin1,plugin2,...
 			  build the specified plugins. Available:
-			  postr, reload, fullscreen, as well as the aliases default, 
+			  postr, as well as the aliases default, 
 			  all, and really-all],
 			  [plugins=$with_plugins],
 			  [plugins="default"])
@@ -310,8 +310,6 @@ AC_CONFIG_FILES([
 Makefile
 plugins/Makefile
 plugins/postr/Makefile
-plugins/reload/Makefile
-plugins/fullscreen/Makefile
 po/Makefile.in])
 
 AC_OUTPUT
