@@ -1,9 +1,0 @@
-[Eog Plugin]
-Module=fullscreen
-IAge=2
-_Name=Fullscreen with double-click
-Icon=gtk-fullscreen
-_Description=Activate fullscreen mode with double-click
-Authors=Lucas Rocha <lucasr@gnome.org>
-Copyright=Copyright © 2007 Lucas Rocha 
-Website=http://www.gnome.org/projects/eog
