@@ -1,9 +1,0 @@
-[Eog Plugin]
-Module=reload
-IAge=2
-_Name=Reload Image
-Icon=gtk-refresh
-_Description=Reload current image
-Authors=Lucas Rocha <lucasr@gnome.org>
-Copyright=Copyright © 2007 Lucas Rocha 
-Website=http://www.gnome.org/projects/eog
